# generate-amr-data

./: .env.example  .gitignore  README.md  analyze_failed_samples.py  analyze_tokens.py  data_pipeline.py  diverse_sampling_pipeline.py  main.ipynb  pyproject.toml  requirements.txt  score_top3.py  test.ipynb  vllm_pipeline.py
.agents/rules/: uv-env.md
configs/: configs.json  diverse_sampling_config.json  hyperparameters.json  vllm_generation_config.json
data/: systhetic_data.jsonl
notebooks/: SFT_Qwen3.ipynb  main.ipynb  process_data.ipynb  sft_qwen3_from_top3_data.ipynb  sft_qwen3_from_top3_data.py  train.py
schema/: data_schema.py
services/: hf_storage.py
services/amr_hint/: AMRHint.py  amr_hint.py  prompt_builder.py  units.py
services/amr_hint/concepts/: concept_groups.json  extracted_hyphenated_concepts.json  propbank_amr_frames.jsonl  relations.json
services/deepseek/: deepseek.py
services/vllm/: __init__.py  engine.py
utils/: amr_utils.py
