[project]
name = "generate-amr-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "matplotlib>=3.11.0",
    "openai>=2.44.0",
    "penman>=1.3.1",
    "smatchpp>=1.8.0",
    "unsloth>=2025.9.5",
    "vllm>=0.24.0",
    "wandb>=0.28.0",
]
